[package]
name = "hocus"
version = "0.1.0-alpha.5"
authors = ["Hugo Dutka <contact@hugodutka.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
clap = "3.0.0-beta.2"
dirs = "3.0.1"
fs_extra = "1.2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
